--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
     src: url(../Img/IBMPlexMono-Regular.ttf);
 }
 
-body { min-width: 1167px; }
+body { max-width: 100%; max-height: 100% ;overflow-x: hidden; }
 
 
 
